<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rating">

    <TextView
        android:id="@+id/nilai"
        android:layout_width="106dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="77dp"
        android:layout_toStartOf="@+id/share"
        android:layout_toEndOf="@+id/back"
        android:textColor="@color/black"
        android:text="Penilaian"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        app:srcCompat="?attr/actionModeShareDrawable" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/view"
        android:layout_width="330dp"
        android:layout_height="375dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="35dp"
        app:shapeAppearanceOverlay="@style/roundview"
        android:background="@color/jj" />

    <ImageView
        android:id="@+id/cabe"
        android:layout_width="222dp"
        android:layout_height="151dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="86dp"
        app:srcCompat="@drawable/rectangle_243" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="234dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="288dp"
        android:textColor="@color/black"
        android:text="Cabe Merah 250 Gram - Foreats"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="321dp"
        android:textColor="@color/black"
        android:text="Komentar :"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/kom"
        android:layout_width="300dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="346dp"
        android:text="@string/komentar"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="425dp"
        android:text="Harga :"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/Rp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="443dp"
        android:text="Rp.31.800"
        android:textSize="12sp"
        android:textColor="@color/black"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/view2"
        android:layout_width="334dp"
        android:layout_height="87dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="494dp"
        android:layout_marginEnd="30dp"
        app:shapeAppearanceOverlay="@style/roundview"
        android:background="@color/jj" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/view2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="512dp"
        android:text="Berikan Penilaian Kamu!"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:contentDescription="@string/up"
        app:srcCompat="@drawable/rectangle_13" />

    <TextView
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnUpdate"
        android:layout_alignBottom="@+id/btnUpdate"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="20dp"
        android:text="Update Komentar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/btnKirim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpdate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:contentDescription="@string/kirim"
        app:srcCompat="@drawable/rectangle_13" />

    <TextView
        android:id="@+id/kirim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnKirim"
        android:layout_alignBottom="@+id/btnKirim"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="20dp"
        android:text="Kirim"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/view2"
        android:layout_alignBottom="@+id/view2"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="19dp"
        app:srcCompat="@drawable/star_rating" />


</RelativeLayout>